# howan

./: CLAUDE.md  Makefile  README.md
crates/howan/: Cargo.toml
crates/howan/src/: app.rs  cli.rs  daemon.rs  logging.rs  main.rs  pidfile.rs
crates/howan/src/app/: handlers.rs  lock.rs  render.rs  shader.rs  shader.wgsl
crates/howan/src/daemon/: mutter.rs
docs/guides/: 10-documentation-structure.md  20-swayidle.md  30-composited-surface.md  40-resident-daemon.md  50-shader-player.md
docs/tasks/2026/: 0519-2217-m1-fullscreen-window.md  0520-1927-m2-swayidle-integration.md  0521-0027-composited-surface-avoid-fullscreen-modeset.md  0521-0349-m2.5-resident-daemon-idle-detection.md  0521-1459-m3-dpms-suppression-idle-inhibit.md  0524-1049-m4-three-phase-lifecycle.md  0524-1828-q4-user-active-watch-after-phase3.md  0525-1816-phase3-retain-saver-surface.md  0527-0527-m10-systemd-user-unit.md  0528-0238-drop-phase2-lock-session.md  0528-1228-m6-wgsl-shader-player.md  0528-1833-systemd-dropin-example-nonfhs-gpu.md  0529-1359-m7-glsl-shadertoy-support.md
examples/shaders/: drifting-bands.glsl  shadertoy-rainbow.glsl
packaging/: install.sh  uninstall.sh
packaging/systemd/: howan.service
packaging/systemd/howan.service.d/: override.conf.example
