[package]
name = "howan"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A lightweight Wayland screensaver"
repository = "https://github.com/x7c1/howan"

[dependencies]
# `xkbcommon` is part of SCTK's default features but pulls in libxkbcommon-dev
# as a system dependency. M1 only needs "any key was pressed", so we bind
# `wl_keyboard` events directly through `wayland-client` and skip the full
# keymap pipeline. Later milestones can opt back in if real key handling is
# needed.
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
wayland-client = "0.31"
# Depend on calloop directly (the same version SCTK pulls in) so we can enable
# its `signals` feature. This gives a `signalfd`-backed event source that
# delivers SIGTERM/SIGINT through the running event loop, letting us reuse the
# existing clean-exit path instead of aborting from an async signal handler.
calloop = { version = "0.14", features = ["signals"] }
# Minimal CLI: `start` / `stop` subcommands. The derive API is the conventional
# choice and will carry forward to later milestones (config-file overrides etc.).
clap = { version = "4", features = ["derive"] }
# Used for `kill(pid, 0)` liveness probes and `kill(pid, SIGTERM)` from
# `howan stop`. Already in the tree transitively; declared directly here so the
# unsafe FFI calls have a first-class dependency.
libc = "0.2"
# D-Bus client for the GNOME idle backend. The resident daemon talks to
# `org.gnome.Mutter.IdleMonitor` on the session bus to learn when the seat has
# been idle for T1 (Mutter does not implement `ext-idle-notify-v1`, so swayidle
# cannot be used on GNOME — see docs/guides/40-resident-daemon.md). We use the
# blocking API on a dedicated thread and forward idle events into the calloop
# loop, so no async runtime is pulled into the Wayland thread.
zbus = "5"
