[package]
name = "howan"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A lightweight Wayland screensaver"
repository = "https://github.com/x7c1/howan"

[dependencies]
# `xkbcommon` is part of SCTK's default features but pulls in libxkbcommon-dev
# as a system dependency. M1 only needs "any key was pressed", so we bind
# `wl_keyboard` events directly through `wayland-client` and skip the full
# keymap pipeline. Later milestones can opt back in if real key handling is
# needed.
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop"] }
# The `system` feature backs proxy IDs with the real libwayland-client
# `wl_proxy` / `wl_display` pointers (via wayland-sys). wgpu's Wayland WSI needs
# those raw C pointers to create a surface, so the GPU renderer reaches them
# through `Connection::backend().display_ptr()` and `surface.id().as_ptr()`.
# Without `system`, the pure-Rust backend exposes no usable pointer for WSI.
# `dlopen` loads `libwayland-client.so` at runtime instead of linking at build
# time, so no `libwayland-dev` / pkg-config setup is needed to build (the
# runtime `.so.0` is enough). See docs/guides/50-shader-player.md.
wayland-client = { version = "0.31", features = ["system", "dlopen"] }
# `zwp_idle_inhibit_manager_v1` / `zwp_idle_inhibitor_v1` are not in the
# `wayland-client` core crate; they live in `wayland-protocols` under
# `wp::idle_inhibit::zv1::client`. The daemon holds an inhibitor on the saver
# surface for as long as the saver is shown so the compositor does not blank
# the display (DPMS off) behind it — wake-from-DPMS is multi-second on the
# target NVIDIA hardware. The zv1 protocols sit behind the `unstable` feature
# gate; `client` generates the client-side bindings. Pinned to the version
# resolved alongside `wayland-client = "0.31"`. See
# docs/guides/40-resident-daemon.md.
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# GPU-backed renderer. wgpu compiles the bundled WGSL fragment shader into a
# render pipeline and draws it to the saver surface once per Wayland frame
# callback. wgpu validates the WGSL internally (through naga) when the pipeline
# is built; naga (wgpu's shader translator) is also declared directly and pinned
# to wgpu's major version so later milestones can parse/validate shaders
# explicitly (M7 GLSL→WGSL, M9 static guards) without a version-skew surprise.
# `raw-window-handle` is pinned to the major version wgpu 22 expects (0.6) so we
# can hand-build the Wayland display/window handles from the `wl_display` /
# `wl_surface` raw pointers (wayland-client does not expose an `rwh` feature for
# this version). See docs/guides/50-shader-player.md.
# `naga-ir` enables `wgpu::ShaderSource::Naga`, letting howan hand wgpu a
# `naga::Module` it parsed + validated itself (the GLSL/Shadertoy path) instead
# of raw source. The default features (WGSL, Vulkan, …) stay on.
wgpu = { version = "22", features = ["naga-ir"] }
# `glsl-in` enables naga's GLSL frontend so howan can accept Shadertoy-style
# GLSL fragment shaders (M7). The source is parsed to a `naga::Module`, validated
# with `naga::valid::Validator`, and handed to wgpu via `ShaderSource::Naga` —
# the same naga IR + validation the WGSL path goes through, so GLSL never reaches
# the driver as raw text. See docs/guides/50-shader-player.md.
naga = { version = "22", features = ["glsl-in"] }
raw-window-handle = "0.6"
# `pollster` blocks on wgpu's async adapter/device requests so the renderer can
# be created from the synchronous Wayland setup path without pulling in a full
# async runtime.
pollster = "0.4"
# Zero-copy casting of the uniform struct to the byte slice wgpu's
# `write_buffer` expects, without hand-rolling unsafe transmutes.
bytemuck = { version = "1", features = ["derive"] }
# Depend on calloop directly (the same version SCTK pulls in) so we can enable
# its `signals` feature. This gives a `signalfd`-backed event source that
# delivers SIGTERM/SIGINT through the running event loop, letting us reuse the
# existing clean-exit path instead of aborting from an async signal handler.
calloop = { version = "0.14", features = ["signals"] }
# Minimal CLI: `start` / `stop` subcommands. The derive API is the conventional
# choice and will carry forward to later milestones (config-file overrides etc.).
clap = { version = "4", features = ["derive"] }
# Used for `kill(pid, 0)` liveness probes and `kill(pid, SIGTERM)` from
# `howan stop`. Already in the tree transitively; declared directly here so the
# unsafe FFI calls have a first-class dependency.
libc = "0.2"
# D-Bus client for the GNOME idle backend. The resident daemon talks to
# `org.gnome.Mutter.IdleMonitor` on the session bus to learn when the seat has
# been idle for T1 (Mutter does not implement `ext-idle-notify-v1`, so swayidle
# cannot be used on GNOME — see docs/guides/40-resident-daemon.md). We use the
# blocking API on a dedicated thread and forward idle events into the calloop
# loop, so no async runtime is pulled into the Wayland thread.
zbus = "5"
# Structured logging. The daemon is intended to run unattended under a systemd
# `--user` unit, so lifecycle events (idle detected, saver shown, phase
# transitions, inhibitor acquired/released, shutdown) are emitted through
# `tracing` and rendered by `tracing-subscriber` to stderr — which systemd
# captures into the journal. `env-filter` lets `RUST_LOG=howan=debug` raise
# verbosity for one-off debugging without rebuilding. ANSI is disabled at
# subscriber init because the journal is the primary sink and does not render
# colors. See docs/guides/40-resident-daemon.md ("Verifying the daemon via
# the journal").
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
